--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "superstatic": "6.0.3",
     "truffle": "^5.1.43",
     "truffle-hdwallet-provider": "1.0.2",
-    "web3": "^1.2.11",
+    "web3": "1.2.5",
     "webpack": "^4.6.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.11.0",
